Toggle between gap and time is fixed to not shift all the ui

--- a/src/main/resources/static/css/basic.css
+++ b/src/main/resources/static/css/basic.css
@@ -43,3 +43,9 @@ body {
 .main-content {
     flex: 1;
 }
+
+.invisible-space {
+    visibility: hidden;
+    height: 0;
+    overflow: hidden;
+}
